--- a/Style.css
+++ b/Style.css
@@ -25,6 +25,7 @@ div{
   	border: 3px solid pink;
     margin:7px;
     padding:7px;
+    background-color: RGBA(255,255,255,0.5)
 }
 
 input[type=button]{
